260212-02-큐레이터파트-하단 영화 광고영역추가, css 수정 진행 중

--- a/index.html
+++ b/index.html
@@ -581,7 +581,14 @@
                 </ul>
                 <div class="curator-info-wrap">
                     <!-- 화살표 -->
-                    <div class="curator-info-arrow"></div>
+                    <div class="curator-info-arrow">
+                        <ul class="arrow-btn">
+                            <li class="arrow-btn-left"><a href="#"><img src="./images/logo-icon/arrow-left-icon.png"
+                                        alt="왼쪽 화살표"></a></li>
+                            <li class="arrow-btn-right"><a href="#"><img src="./images/logo-icon/arrow-right-icon.png"
+                                        alt="오른쪽 화살표"></a></li>
+                        </ul>
+                    </div>
                     <!-- 인디케이터 -->
                     <div class="curator-info-pager"></div>
                     <div class="curator-moive-inner-wrap">
@@ -596,14 +603,16 @@
                                 <!-- 우측영역 -->
                                 <div class="curator-moive-info">
                                     <!-- 제목, 설명글, 등 -->
-                                    <div class="title-wrap">
-                                        <h3>만약에 우리</h3><span><img src="./images/curator/Age-15.png"
-                                                alt="15세 관람가"></span>
-                                    </div>
-                                    <div class="comment-wrap">
-                                        <span><img src="./images/curator/icon_curator_comment.svg"
-                                                alt="영화 추천 한줄 평"></span>
-                                        <p>너무 빨리 찾아온 사랑을 향한 늦은 인사</p>
+                                    <div class="curator-moive-title-wrap">
+                                        <div class="title-wrap">
+                                            <h3>만약에 우리</h3><span><img src="./images/curator/Age-15.png"
+                                                    alt="15세 관람가"></span>
+                                        </div>
+                                        <div class="comment-wrap">
+                                            <span><img src="./images/curator/icon_curator_comment.svg"
+                                                    alt="영화 추천 한줄 평"></span>
+                                            <p>너무 빨리 찾아온 사랑을 향한 늦은 인사</p>
+                                        </div>
                                     </div>
                                     <p class="plot-info">"가장 초라했던 그때, 가장 눈부시던 우리" 고향 가는 고속버스에 올라탄 은호(구교환)와 휴학 후 어디론가 떠날
                                         결심을 한 정원(문가영), 나란히 앉게 된 두 사람은 뜻밖의 인연을 맺는다. 서로의 꿈을 응원하며 의지하던 두 사람은 어느새 일상 깊숙이
@@ -625,13 +634,16 @@
                                 <!-- 우측영역 -->
                                 <div class="curator-moive-info">
                                     <!-- 제목, 설명글, 등 -->
-                                    <div class="title-wrap">
-                                        <h3>하트맨</h3><span><img src="./images/curator/Age-12.png" alt="12세 관람가"></span>
-                                    </div>
-                                    <div class="comment-wrap">
-                                        <span><img src="./images/curator/icon_curator_comment.svg"
-                                                alt="영화 추천 한줄 평"></span>
-                                        <p>충돌할수록 충만해지는 하트의 힘</p>
+                                    <div class="curator-moive-title-wrap">
+                                        <div class="title-wrap">
+                                            <h3>하트맨</h3><span><img src="./images/curator/Age-12.png"
+                                                    alt="12세 관람가"></span>
+                                        </div>
+                                        <div class="comment-wrap">
+                                            <span><img src="./images/curator/icon_curator_comment.svg"
+                                                    alt="영화 추천 한줄 평"></span>
+                                            <p>충돌할수록 충만해지는 하트의 힘</p>
+                                        </div>
                                     </div>
                                     <p class="plot-info">돌아온 남자 승민(권상우)이 다시 만난 첫사랑을 놓치지 않기 위해 고군분투하지만,
                                         그녀에게 절대 말할 수 없는 비밀이 생기며 벌어지는 코미디</p>
@@ -650,14 +662,16 @@
                                 <!-- 우측영역 -->
                                 <div class="curator-moive-info">
                                     <!-- 제목, 설명글, 등 -->
-                                    <div class="title-wrap">
-                                        <h3>아바타: 불과 재</h3><span><img src="./images/curator/Age-15.png"
-                                                alt="15세 관람가"></span>
-                                    </div>
-                                    <div class="comment-wrap">
-                                        <span><img src="./images/curator/icon_curator_comment.svg"
-                                                alt="영화 추천 한줄 평"></span>
-                                        <p>증오와 분리를 넘어, 극장으로 연결되어, 다음 세대를 향해</p>
+                                    <div class="curator-moive-title-wrap">
+                                        <div class="title-wrap">
+                                            <h3>아바타: 불과 재</h3><span><img src="./images/curator/Age-15.png"
+                                                    alt="15세 관람가"></span>
+                                        </div>
+                                        <div class="comment-wrap">
+                                            <span><img src="./images/curator/icon_curator_comment.svg"
+                                                    alt="영화 추천 한줄 평"></span>
+                                            <p>증오와 분리를 넘어, 극장으로 연결되어, 다음 세대를 향해</p>
+                                        </div>
                                     </div>
                                     <p class="plot-info">월드 와이드 흥행 불멸의 1위 <아바타> 시리즈의 세 번째 이야기!<br>
                                             판도라를 위협하는 재의 부족, 더 이상 인간만이 적이 아니다!<br>
@@ -677,13 +691,16 @@
                                 <!-- 우측영역 -->
                                 <div class="curator-moive-info">
                                     <!-- 제목, 설명글, 등 -->
-                                    <div class="title-wrap">
-                                        <h3>휴민트</h3><span><img src="./images/curator/Age-15.png" alt="15세 관람가"></span>
-                                    </div>
-                                    <div class="comment-wrap">
-                                        <span><img src="./images/curator/icon_curator_comment.svg"
-                                                alt="영화 추천 한줄 평"></span>
-                                        <p>사라진 정보원 반드시 구출한다</p>
+                                    <div class="curator-moive-title-wrap">
+                                        <div class="title-wrap">
+                                            <h3>휴민트</h3><span><img src="./images/curator/Age-15.png"
+                                                    alt="15세 관람가"></span>
+                                        </div>
+                                        <div class="comment-wrap">
+                                            <span><img src="./images/curator/icon_curator_comment.svg"
+                                                    alt="영화 추천 한줄 평"></span>
+                                            <p>사라진 정보원 반드시 구출한다</p>
+                                        </div>
                                     </div>
                                     <p class="plot-info">동남아에서 벌어진 국제 범죄를 추적하던 국정원 블랙 요원, 조 과장(조인성)은 자신의 휴민트 작전에서 희생된
                                         정보원이 남긴 단서를 쫓아 블라디보스토크로 향한다. 그곳에서 북한 식당 종업원 채선화(신세경)와 접촉한 조 과장은 새로운 휴민트 작전의
@@ -704,14 +721,16 @@
                                 <!-- 우측영역 -->
                                 <div class="curator-moive-info">
                                     <!-- 제목, 설명글, 등 -->
-                                    <div class="title-wrap">
-                                        <h3>프로젝트 Y</h3><span><img src="./images/curator/Age-15.png"
-                                                alt="15세 관람가"></span>
-                                    </div>
-                                    <div class="comment-wrap">
-                                        <span><img src="./images/curator/icon_curator_comment.svg"
-                                                alt="영화 추천 한줄 평"></span>
-                                        <p>‘검은 돈’ 향한 욕망… 그 끝은 어디인가</p>
+                                    <div class="curator-moive-title-wrap">
+                                        <div class="title-wrap">
+                                            <h3>프로젝트 Y</h3><span><img src="./images/curator/Age-15.png"
+                                                    alt="15세 관람가"></span>
+                                        </div>
+                                        <div class="comment-wrap">
+                                            <span><img src="./images/curator/icon_curator_comment.svg"
+                                                    alt="영화 추천 한줄 평"></span>
+                                            <p>‘검은 돈’ 향한 욕망… 그 끝은 어디인가</p>
+                                        </div>
                                     </div>
                                     <p class="plot-info">화려한 도시 한가운데에서 다른 내일을 꿈꾸며 살아가던 미선과 도경. 하지만 그 희망마저 빼앗기고 벼랑 끝까지
                                         내몰린 상황, 두 사람은 우연히 알게 된 검은 돈과 숨겨진 금괴를 훔쳐 새로운 기회를 만들고 돈과 금괴에 얽힌 이들이 미선과 도경을 뒤쫓기
@@ -727,6 +746,14 @@
                     </div>
                 </div>
                 <div class="curator-ad-wrap">
+                    <ul class="curator-ad-item">
+                        <li>
+                            <a href="#"><img src="./images/curator/curator_movie_ad_img_01.jpg" alt="curator-ad-01"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./images/curator/curator_movie_ad_img_02.jpg" alt="curator-ad-02"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
