메인 반응형 수정 / 서브 페이지 수정

--- a/index.html
+++ b/index.html
@@ -924,11 +924,13 @@
                         </form>
                     </div> -->
                 </div>
+            </div>
         </section>
 
         <!-- info section -->
         <section class="info-wrap">
             <div class="inner">
+                <h2 class="blind">정보 섹션</h2>
                 <ul class="info-list">
                     <li><img src="./images/logo-icon/customer-service-icon.png" alt="고객센터">
                         <p>고객센터</p>
