--- a/sub-cinema.html
+++ b/sub-cinema.html
@@ -291,39 +291,46 @@
                             <p><span>총 좌석 수 </span><strong>1,054석</strong></p>
                         </div>
 
-
-                        <div class="facilities">
-                            <h3>보유시설</h3>
-                            <ul class="facilities-list">
-                                <li>
-                                    <img src="./images/sub-cinema/LightSound-Cinema.jpg" alt="광음시네마">
-                                    <p>광음시네마</p>
-                                </li>
-                                <li>
-                                    <img src="./images/sub-cinema/Recliner.jpg" alt="리클라이너">
-                                    <p>리클라이너</p>
-                                </li>
-                                <li>
-                                    <img src="./images/sub-cinema/CineCouple.jpg" alt="씨네커플">
-                                    <p>씨네커플</p>
-                                </li>
-                            </ul>
-                        </div>
-
-
-                        <div class="floor-info">
-                            <h3>층별 주요 안내</h3>
-                            <div class="floor-info-list">
-                                <ul>
-                                    <li>6층 (메인 로비) : 매표소, 매점(스낵 바), 키오스크, 1~3관 입장</li>
-                                    <li>7층 : 1~3관 상영관</li>
-                                    <li>9층 : 4~6관 상영관</li>
+                        <div class="facilities-floor-wrap">
+                            <div class="facilities">
+                                <h3>보유시설</h3>
+                                <ul class="facilities-list">
+                                    <li>
+                                        <img src="./images/sub-cinema/LightSound-Cinema.jpg" alt="광음시네마">
+                                        <p>광음시네마</p>
+                                    </li>
+                                    <li>
+                                        <img src="./images/sub-cinema/Recliner.jpg" alt="리클라이너">
+                                        <p>리클라이너</p>
+                                    </li>
+                                    <li>
+                                        <img src="./images/sub-cinema/CineCouple.jpg" alt="씨네커플">
+                                        <p>씨네커플</p>
+                                    </li>
                                 </ul>
+                            </div>
+
+
+                            <div class="floor-info">
+                                <h3>층별 주요 안내</h3>
+                                <div class="floor-info-list">
+                                    <ul>
+                                        <li>6층 (메인 로비) : 매표소, 매점(스낵 바), 키오스크, 1~3관 입장</li>
+                                        <li>7층 : 1~3관 상영관</li>
+                                        <li>9층 : 4~6관 상영관</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
 
                         <div class="traffic-info">
-                            <div class="bus">
+                            <div class="traffic-title">
+                                <div>
+                                    <h2>대중교통 안내</h2>
+                                </div>
+                            </div>
+
+                            <div class="bus-hover">
                                 <div>
                                     <img src="./images/logo-icon/bus-icon.png" alt="버스">
                                     <p>버스로 오시는 길</p>
@@ -349,14 +356,25 @@
                                 </ul>
                             </div>
 
-                            <div class="subway">
-                                <img src="./images/logo-icon/subway-icon.png" alt="지하철">
-                                <p>지하철로 오시는 길</p>
+                            <div class="bus wrap">
+                                <div>
+                                    <img src="./images/logo-icon/subway-icon.png" alt="지하철">
+                                    <p>버스로 오시는 길</p>
+                                </div>
                             </div>
 
-                            <div class="car">
-                                <img src="./images/logo-icon/car-icon.png" alt="자가용">
-                                <p>자가용으로 오시는 길</p>
+                            <div class="subway wrap">
+                                <div>
+                                    <img src="./images/logo-icon/subway-icon.png" alt="지하철">
+                                    <p>지하철로 오시는 길</p>
+                                </div>
+                            </div>
+
+                            <div class="car wrap">
+                                <div>
+                                    <img src="./images/logo-icon/car-icon.png" alt="자가용">
+                                    <p>자가용으로 오시는 길</p>
+                                </div>
                             </div>
                         </div>
 
