서브-이벤트페이지-0212최종

--- a/sub-event/index.html
+++ b/sub-event/index.html
@@ -11,8 +11,56 @@
 </head>
 
 <body>
-
-
+    <header>
+        <div class="inner">
+            <p class="ham-btn"><a href="#"><span></span><span></span><span></span></a></p>
+            <h1 class="main-logo"><a href="#"><img src="./images/main-logo.png" alt="롯데시네마"></a></h1>
+            <nav>
+                <ul class="main-menu">
+                    <li>
+                        <a href="#">예매</a>
+                    </li>
+                    <li>
+                        <a href="#">영화</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">박스오피스</a></li>
+                            <li><a href="#">상영예정작</a></li>
+                            <li><a href="#">롯데온리</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="./sub-cinema.html">영화관</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">전체극장</a></li>
+                            <li><a href="#">특별관</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">이벤트</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">현재 진행중인 이벤트</a></li>
+                            <li><a href="#">영화관련 이벤트</a></li>
+                            <li><a href="#">시사회</a></li>
+                            <li><a href="#">제휴할인</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">스토어</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">굿즈</a></li>
+                            <li><a href="#">관람권</a></li>
+                            <li><a href="#">스낵&음료</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="gnb-list">
+                <li><a href="#"><img src="./images/user-icon.png" alt="사용자"></a></li>
+                <li><a href="#"><img src="./images/ticket-icon.png" alt="티켓"></a></li>
+                <li><a href="#"><img src="./images/search-icon.png" alt="검색"></a></li>
+            </ul>
+        </div>
+    </header>
 
     <div class="banner">
         <a href="#"><img src="./images/banner.png" alt=""></a>
@@ -85,141 +133,203 @@
 
             <section>
                 <h2 class="section-title">현재 진행중인 이벤트</h2>
-                <ul class="event-sub-tab-menu-list">
-                    <li><a href="#">전체</a></li>
-                    <li><a href="#">굿즈패키지</a></li>
-                    <li><a href="#">시사회</a></li>
-                    <li><a href="#">무대인사</a></li>
-                    <li><a href="#">영화</a></li>
-                    <li><a href="#">제휴할인혜택</a></li>
-                </ul>
-                <ul class="event-sub-list">
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event8.png" alt="휴민트 무대인사"></div>
-                            <div class="text-box">
-                                <p>무대인사</p>
-                                <div class="text-title">
-                                    <strong>&lt;휴민트&gt; 개봉 2주차 무대인사</strong>
-                                    <strong></strong>
-                                </div>
-                                <span>2026.02.04 ~ 2026.02.10</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event1.png" alt="왕과 사는 남자 개봉 2주차 무대인사">
-                            </div>
-                            <div class="text-box">
-                                <p>무대인사</p>
-                                <div class="text-title">
-                                    <strong>&lt;왕과 사는 남자&gt;</strong>
-                                    <strong>개봉 2주차 무대인사</strong>
-                                </div>
-                                <span>2026.02.11 ~ 2026.02.15</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event2.png" alt="시스터 개봉 2주차 무대인사">
-                            </div>
-                            <div class="text-box">
-                                <p>무대인사</p>
-                                <div class="text-title">
-                                    <strong>&lt;시스터&gt; 개봉 2주차 무대인사</strong>
-                                    <strong></strong>
-                                </div>
-                                <span>2026.02.07 ~ 2026.02.07</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event3.png" alt="텔레토비 터비토스트 키링 콤보 런칭">
-                            </div>
-                            <div class="text-box">
-                                <p>굿즈패키지</p>
-                                <div class="text-title">
-                                    <strong>텔레토비 터비토스트 키링 콤보 런칭</strong>
-                                    <strong></strong>
-                                </div>
-                                <span>2026.02.01 ~ 2026.03.31</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event4.png" alt="문화누리카드 혜택"></div>
-                            <div class="text-box">
-                                <p>제휴할인</p>
-                                <div class="text-title">
-                                    <strong>문화누리카드 혜택</strong>
-                                    <strong></strong>
-                                </div>
-                                <span>2026.01.01 ~ 2026.12.31</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event5.png" alt="경기 컬처패스로 즐기는 문화혜택">
-                            </div>
-                            <div class="text-box">
-                                <p>제휴할인</p>
-                                <div class="text-title">
-                                    <strong>경기 컬처패스로 즐기는 문화혜택</strong>
-                                    <strong></strong>
-                                </div>
-                                <span>2026.01.26 ~ 2026.12.31</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event6.png" alt="하우스메이트 현장 증정 이벤트">
-                            </div>
-                            <div class="text-box">
-                                <p>영화</p>
-                                <div class="text-title">
-                                    <strong>&lt;하우스메이드&gt; 2주차</strong>
-                                    <strong>주말 현장 증정 이벤트</strong>
-                                </div>
-                                <span>2026.02.06 ~ 2026.02.12</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img-box"><img src="./images/sub-event7.png" alt="직장상사 길들이기 현장이벤트">
-                            </div>
-                            <div class="text-box">
-                                <p>영화</p>
-                                <div class="text-title">
-                                    <strong>&lt;직장상사 길들이기&gt;</strong>
-                                    <strong>개봉 2주차 현장이벤트</strong>
-                                </div>
-                                <span>2026.02.04 ~ 2026.02.10</span>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                <div class="event-sub-tab-wrap">
+                    <ul class="event-sub-tab-menu-list">
+                        <li><a href="#">전체</a></li>
+                        <li><a href="#">굿즈패키지</a></li>
+                        <li><a href="#">시사회</a></li>
+                        <li><a href="#">무대인사</a></li>
+                        <li><a href="#">영화 이벤트</a></li>
+                        <li><a href="#">제휴할인혜택</a></li>
+                    </ul>
+                    <div class="event-sub-wrap">
+                        <ul class="event-sub-list">
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event8.png" alt="휴민트 무대인사"></div>
+                                    <div class="text-box">
+                                        <p>무대인사</p>
+                                        <div class="text-title">
+                                            <p> &lt;휴민트&gt; 개봉 2주차 무대인사</p>
+                                        </div>
+                                        <span>2026.02.04 ~ 2026.02.10</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event1.png" alt="왕과 사는 남자 개봉 2주차 무대인사">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>무대인사</p>
+                                        <div class="text-title">
+                                            <p>&lt;왕과 사는 남자&gt; 개봉 2주차 무대인사</p>
+                                        </div>
+                                        <span>2026.02.11 ~ 2026.02.15</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event2.png" alt="시스터 개봉 2주차 무대인사">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>무대인사</p>
+                                        <div class="text-title">
+                                            <p> &lt;시스터&gt; 개봉 2주차 무대인사</p>
+                                        </div>
+                                        <span>2026.02.07 ~ 2026.02.07</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event3.png" alt="텔레토비 터비토스트 키링 콤보 런칭">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>굿즈패키지</p>
+                                        <div class="text-title">
+                                            <p> 텔레토비 터비토스트 키링 콤보 런칭</p>
+                                        </div>
+                                        <span>2026.02.01 ~ 2026.03.31</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event4.png" alt="문화누리카드 혜택"></div>
+                                    <div class="text-box">
+                                        <p>제휴할인</p>
+                                        <div class="text-title">
+                                            <p>문화누리카드 혜택</p>
+                                        </div>
+                                        <span>2026.01.01 ~ 2026.12.31</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event5.png" alt="경기 컬처패스로 즐기는 문화혜택">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>제휴할인</p>
+                                        <div class="text-title">
+                                            <p> 경기 컬처패스로 즐기는 문화혜택</p>
+                                        </div>
+                                        <span>2026.01.26 ~ 2026.12.31</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event6.png" alt="하우스메이트 현장 증정 이벤트">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>영화이벤트</p>
+                                        <div class="text-title">
+                                            <p>&lt;하우스메이드&gt; 2주차 주말 현장 증정</p>
+                                        </div>
+                                        <span>2026.02.06 ~ 2026.02.12</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box"><img src="./images/sub-event7.png" alt="직장상사 길들이기 현장이벤트">
+                                    </div>
+                                    <div class="text-box">
+                                        <p>영화이벤트</p>
+                                        <div class="text-title">
+                                            <p> &lt;직장상사 길들이기&gt; 개봉 2주차 증정 </p>
+                                        </div>
+                                        <span>2026.02.04 ~ 2026.02.10</span>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                        <!-- page -->
+                        <div class="page">
+                            <a href="#"><img src="./images/pg-left.png" alt="왼쪽 페이지"></a>
+                            <div class="pagenb"> <span>1 </span><span>/ 10</span></div>
+                            <a href="#"><img src="./images/pg-right.png" alt="오른쪽 페이지"></a>
+                        </div>
+                    </div>
+                    <!-- 더 찾아보기 -->
+                    <form class="event-search">
+                        <input type="text" placeholder="검색어를 입력하세요">
+                        <button><img src="./images/search-icon.png" alt="극장검색버튼"></button>
+                    </form>
+                </div>
             </section>
-            <!-- page -->
-            <div class="page">
-                <a href="#"><img src="./images/pg-left.png" alt="왼쪽 페이지"></a>
-                <span>1 / 10</span>
-                <a href="#"><img src="./images/pg-right.png" alt="오른쪽 페이지"></a>
-            </div>
-            <!-- 더 찾아보기 -->
-            <form class="event-search">
-                <input type="text" placeholder="검색어를 입력하세요">
-                <button><img src="./images/logo-icon/search-icon.png" alt="극장검색버튼"></button>
-            </form>
         </div>
     </main>
+    <!-- footer -->
+    <footer>
+        <div class="inner">
+            <!-- <div class="footer-left"> -->
+            <div class="footer-top">
+                <ul class="util-menu">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">이용약관</a></li>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <li><a href="#">이메일무단수집거부</a></li>
+                    <li><a href="#">고정형 영상정보처리기기 운영 및 </a></li>
+                    <li><a href="#">L.POINT회원안내</a></li>
+                    <li><a href="#">배정기준</a></li>
+                    <li><a href="#">채용안내</a></li>
+                    <li><a href="#">광고/임대문의</a></li>
+                    <li><a href="#">사회적책임</a></li>
+                </ul>
 
+                <div class="search-wrap">
+                    <a href="#">
+                        <img src="./images/search-icon.png" alt="극장찾기">
+                        <p>극장찾기</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="footer-bottom-left">
+                    <p class="footer-logo"><img src="./images/footer-logo.png" alt="롯데시네마"></p>
+                    <address>
+                        <p>
+                            <strong>롯데컬처웍스㈜</strong>
+                            <span>서울특별시 송파구 올림픽로 295 삼성생명 잠실빌딩 18F</span>
+                        </p>
+                        <p>
+                            <span>대표 이메일 lottecultureworks@lotte.net</span>
+                            <span>고객센터 1544-8855 (유료)</span>
+                            <span>사업자등록번호 313-87-00979</span>
+                            <span>통신판매신고번호 2018-서울송파-1184</span>
+                        </p>
+                        <p>
+                            <span>대표이사 김종열</span>
+                            <span>개인정보 보호 책임자 이수민</span>
+                            <span>호스팅 제공자 롯데이노베이트</span>
+                        </p>
+                        <p class="copy">Copyright © LOTTE Cultureworks All Right Reserved.</p>
+                    </address>
+                </div>
+
+                <div class="footer-bottom-right">
+                    <div class="family">
+                        <img src="./images/family-friendly.png" alt="가족친화 인증기업선정">
+                        <p>가족친화<br> 인증기업<br> 선정</p>
+                    </div>
+
+                    <ul class="sns-list">
+                        <li><a href="#"><img src="./images/youtube-icon.png" alt="youtube"></a></li>
+                        <li><a href="#"><img src="./images/insta-icon.png" alt="insta"></a></li>
+                        <li><a href="#"><img src="./images/facebook-icon.png" alt="facebook"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- </div> -->
+            <!-- <div class="footer-right"> -->
+            <!-- </div> -->
+        </div>
+    </footer>
 </body>
 
 </html>
