메인 반응형 / 서브 수정

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">이벤트</a>
+                        <a href="./sub-event/index.html">이벤트</a>
                         <ul class="sub-menu">
                             <li><a href="#">현재 진행중인 이벤트</a></li>
                             <li><a href="#">영화관련 이벤트</a></li>
@@ -978,7 +978,7 @@
                     <li><a href="#">사회적책임</a></li>
                 </ul>
 
-                <div class="search-wrap">
+                <div class="search-wrap search">
                     <a href="#">
                         <img src="./images/logo-icon/search-icon.png" alt="극장찾기">
                         <p>극장찾기</p>
@@ -1010,6 +1010,13 @@
                 </div>
 
                 <div class="footer-bottom-right">
+                    <div class="search-wrap-mobile search">
+                        <a href="#">
+                            <img src="./images/logo-icon/search-icon.png" alt="극장찾기">
+                            <p>극장찾기</p>
+                        </a>
+                    </div>
+
                     <div class="family">
                         <img src="./images/logo-icon/family-friendly.png" alt="가족친화 인증기업선정">
                         <p>가족친화<br> 인증기업<br> 선정</p>
