info-list html,css,반응형 수정

--- a/index.html
+++ b/index.html
@@ -942,19 +942,19 @@
                         <p>고객센터</p>
                     </li>
                     <li><img src="./images/logo-icon/question-icon.png" alt="자주 묻는 질문">
-                        <p>자주 묻는 질문</p>
+                        <p><span>자주 묻는 질문</span><i>QnA</i></p>
                     </li>
                     <li><img src="./images/logo-icon/inquiry-icon.png" alt="1:1 문의">
-                        <p>1:1 문의</p>
+                        <p>1:1 <span>문의</span></p>
                     </li>
                     <li><img src="./images/logo-icon/rent-icon.png" alt="단체/대관 문의">
-                        <p>단체/대관 문의</p>
+                        <p>단체/대관 <span>문의</span></p>
                     </li>
                     <li><img src="./images/logo-icon/lost-item-icon.png" alt="분실물 문의/접수">
-                        <p>분실물 문의/접수</p>
+                        <p>분실물 <span>문의/접수</span></p>
                     </li>
                     <li><img src="./images/logo-icon/lotte-Private-icon.png" alt="샤롯데 프라이빗 대관예매">
-                        <p>샤롯데 프라이빗 <br> 대관예매</p>
+                        <p>샤롯데 <span>프라이빗</span> <br> 대관예매</p>
                     </li>
                 </ul>
             </div>
