메인 페이지 반응형 수정

--- a/index.html
+++ b/index.html
@@ -966,16 +966,16 @@
             <!-- <div class="footer-left"> -->
             <div class="footer-top">
                 <ul class="util-menu">
-                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#"><span>회사소개</span></a></li>
                     <li><a href="#">이용약관</a></li>
                     <li><a href="#">개인정보처리방침</a></li>
-                    <li><a href="#">이메일무단수집거부</a></li>
-                    <li><a href="#">고정형 영상정보처리기기 운영 및 </a></li>
                     <li><a href="#">L.POINT회원안내</a></li>
-                    <li><a href="#">배정기준</a></li>
-                    <li><a href="#">채용안내</a></li>
-                    <li><a href="#">광고/임대문의</a></li>
-                    <li><a href="#">사회적책임</a></li>
+                    <li><a href="#"><span>이메일무단수집거부</span></a></li>
+                    <li><a href="#"><span>고정형 영상정보처리기기 운영 및</span></a></li> 
+                    <li><a href="#"><span>배정기준</span></a></li>
+                    <li><a href="#"><span>채용안내</span></a></li>
+                    <li><a href="#"><span>광고/임대문의</span></a></li>
+                    <li><a href="#"><span>사회적책임</span></a></li>
                 </ul>
 
                 <div class="search-wrap search">
